[workspace]
members = [
  "params_derive",
  "loudness_limiter",
  "loudness_ceiling",
]

[workspace.package]
version = "0.9.0"
authors = ["youxkei <youxkei@gmail.com>"]
license = "CC0 1.0"
edition = "2021"
repository = "https://github.com/youxkei/jimtel"

[workspace.dependencies]
vst = "0.3"

[package]
name = "jimtel"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
vst.workspace = true
raw-window-handle = "0.4.2"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "eae4033e7d2cc9c31ccaa2794d5d08eedf2f510c" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "d2512c25bff19c05d73032e5349f3acb03d5da25" }
egui = "0.19.0"
epaint = "0.12.0"
