[package]
name = "loudness_ceiling"
version = "0.6.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "0.2.1"
itertools = "0.10.0"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "c17f556fdc8b5d9278de473f6de6534c67cedf65" }
egui = "0.12.0"
epaint = "0.12.0"
rmp-serde = "0.15.4"
jimtel = { path = ".." }
params_derive = { path = "../params_derive" }
