[package]
name = "loudness_ceiling"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "0.2.1"
itertools = "0.10.0"
rmp-serde = "0.15.4"
jimtel = { path = ".." }
params_derive = { path = "../params_derive" }
