[package]
name = "jimtel_loudness_limiter"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "0.2.1"
itertools = "0.10.0"
baseview = { git = "https://github.com/RustAudio/baseview.git", branch="master" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch="main", features=["canvas"] }
jimtel = { path = ".." }
params = { path = "../params" }
