[package]
name = "loudness_limiter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# When enabled, builds a separate "dev" plugin (distinct name and VST unique_id)
# so it can be loaded alongside the production build in a DAW.
[features]
dev = []

[dependencies]
vst.workspace = true
itertools = "0.10.0"
rmp-serde = "0.15.4"
jimtel = { path = ".." }
params_derive = { path = "../params_derive" }
